--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,10 +76,6 @@ $breakpoint-lg: 1200px;
         background: rgba(0, 0, 0, 0) !important;
     }
 
-    ion-icon {
-        filter: invert(1) hue-rotate(180deg); // revertir imágenes y logos
-    }
-
     ion-item {
         ion-input {
             --color: #ffffff !important;
@@ -186,5 +182,10 @@ $breakpoint-lg: 1200px;
 
     .solicitante-info {
         background: #2d2d2d !important;
+    }
+
+    /* ⚠️ SOLO ICONOS → NUNCA img */
+    ion-icon {
+        color: #ffffff;
     }
 }
